fix: faq header alignment

--- a/apps/mauricekleine.com/src/features/ui/accordion/accordion-item.module.scss
+++ b/apps/mauricekleine.com/src/features/ui/accordion/accordion-item.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     padding: var(--space-1) 0;
+    text-align: left;
     width: 100%;
 
     span {
